# toto

./: .clang-format  CMakeLists.txt  CMakeLists.txt.in  README.md  build.sh  install.sh  toto.hpp  tu_except.cpp  tu_smart_ptr.cpp  uninstall.sh
angular/: CMakeLists.txt  install.sh
angular/src/: CMakeLists.txt
angular/src/app/: CMakeLists.txt  app-routing.module.ts  app.component.css  app.module.ts  hero.service.ts  in-memory-data.service.ts
angular/src/app/dashboard/: CMakeLists.txt
angular/src/app/hero-detail/: CMakeLists.txt  hero-detail.component.html  hero-detail.component.ts
angular/src/app/heroes/: CMakeLists.txt  heroes.component.ts
angular/src/app/messages/: CMakeLists.txt  messages.component.ts
angular/src/environments/: CMakeLists.txt
cpp/: CMakeLists.txt  setup.sh  tu_smart_ptr.cpp
env/: .bash_aliases  .bashrc  .gitconfig  .vimrc  README.md  bash_aliases  bashrc  bright.sh  gitconfig  install.sh  keybindings.json  package_install.sh  session-startup.desktop  session-startup.sh  settings.json  sysctl.conf  vimrc
factory/: CMakeLists.txt  factory.hpp  factory_lib.cpp  factory_main.cpp  readme.md
frrouting/: Dockerfile  docker-compose.yaml
frrouting/code/: daemons.conf  setup.sh  teardown.sh  zebra.conf
http_stream/: README.md  page.html  readme.md
include/: toto.hpp
json/: CMakeLists.txt  tu_jsmn.cpp
protobuf/: CMakeLists.txt  Dockerfile  docker-compose.yaml  setup.sh  test.proto  toto_pb.proto  tu_pb_person.cpp  tu_toto_pb.cpp  tu_toto_pb.py  tu_toto_pb_c.cpp
protobuf/code/: CMakeLists.txt  setup.sh  toto_pb.proto  tu_toto_pb.cpp  tu_toto_pb.py  tu_toto_pb_c.cpp
python/: CMakeLists.txt  README.md  main.py
python/momo/: momo.py
python/toto/: __init__.py
python/toto/all/: __init__.py
python/toto/lib1/: my_lib.py
python/toto/lib2/: __init__.py  my_lib.py
python/toto/lib3/: my_lib.py
redis/: Dockerfile  docker-compose.yaml
redis/code/: client.c  setup.sh  teardown.sh
robotframework/: Dockerfile  README.md  docker-compose.yaml  toto.py
robotframework/code/: setup.sh  toto.robot
uefi/: README.md  docker.sh  run.sh  setup.sh
uefi/TotoPkg/: main.c  toto.dsc  toto.inf
uefi/docker/: Dockerfile
ulfius/: Dockerfile  docker-compose.yaml
ulfius/code/: rest_app.c  setup.sh
zmq/: CMakeLists.txt  Dockerfile  docker-compose.yaml  setup.sh  tu_zmq.py
zmq/code/: tu_zmq.py
zmq/code/dealer_router/: main.cpp  setup.sh
zmq/dealer_router/: CMakeLists.txt  main.cpp
